Fix menu on mobile

--- a/src/bars/Menu.css
+++ b/src/bars/Menu.css
@@ -21,7 +21,11 @@
   }
 
   #Menu .nav-link div {
-    display: inline-block;
+    display: inline;
+  }
+
+  #Menu .nav-link span {
+    transform: none;
   }
 }
 
